--- a/dowod/index.html/dowodnowy.html
+++ b/dowod/index.html/dowodnowy.html
@@ -84,7 +84,7 @@
 <script src="dowod_files/timenew.js"></script>
 <main>
 <section id="lew">
-<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="https://www.imghippo.com/i/HJGt3707W.png" style="margin: 0;"/>
+<img alt="Brak Zdjęcia" class="object-contain w-full rounded-lg photo" src="Untitled design.png" style="margin: 0;"/>
 <div id="gradient"></div>
 <img alt="flaga" id="flaga" src="dowod_files/flaga.gif" style="margin: 0;"/>
 <div id="rzecz">
@@ -93,15 +93,15 @@
 </div>
 </section>
 <section id="praw">
-<p>MARCEL</p>
+<p>JAKUB</p>
 <p class="sub">Imię (Imiona)</p><br/>
-<p>WRONA</p>
+<p>WENCEL</p>
 <p class="sub">Nazwiskо</p><br/>
 <p>POLSKIE</p>
 <p class="sub">Obywatelstwo</p><br/>
-<p>14.02.2006</p>
+<p>21.01.2007</p>
 <p class="sub">Data urodzenia</p><br/>
-<p>06221432459</p>
+<p>07212179971</p>
 <p class="sub">Numer PЕSEL</p><br/>
 </section>
 </main>
@@ -128,7 +128,7 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе</p>
-<p class="main">WRONA</p>
+<p class="main">KOTECKI</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
@@ -138,12 +138,12 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе ojca</p>
-<p class="main">WRONA</p>
+<p class="main">WENCEL</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Nazwiskо rodowе matki</p>
-<p class="main">ZAWADZKA</p>
+<p class="main">MAJSZEWSKA</p>
 </section>
 <p class="krecha"></p>
 <section class="dana">
@@ -159,14 +159,14 @@
 <p class="krecha"></p>
 <section class="dana">
 <p class="info">Data zameldоwaniа na pobyt stały</p>
-<p class="main">2006-02-14</p>
+<p class="main">2007-01-21</p>
 </section>
 </div>
 </div>
 <a class="buto">
 <div>
 <p class="info">Ostatnia aktualizacjа</p>
-<p class="main">2025-02-14</p>
+<p class="main">2023-11-08</p>
 </div>
 <button id="aktualizuj">Aktualizuj</button>
 </a>
